--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ links = "tauri-plugin-hid"
 tauri = { version = "2.4.0" }
 serde = "1.0"
 thiserror = "2"
+hidapi-rusb = "1.3.3"
 
 [build-dependencies]
 tauri-plugin = { version = "2.1.0", features = ["build"] }
