--- a/permissions/default.toml
+++ b/permissions/default.toml
@@ -1,3 +1,3 @@
 [default]
 description = "Default permissions for the plugin"
-permissions = ["allow-ping"]
+permissions = ["allow-device-list", "allow-open", "allow-close", "allow-write", "allow-read"]
