Changed example to Vue app

--- a/examples/tauri-plugin-hid-vue-example/package.json
+++ b/examples/tauri-plugin-hid-vue-example/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "tauri-plugin-hid-example",
+  "name": "tauri-plugin-hid-vue-example",
   "private": true,
   "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "tauri": "tauri"
   },
   "dependencies": {
+    "@redfernelec/tauri-plugin-hid-api": "file:../..",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
-    "@redfernelec/tauri-plugin-hid-api": "file:../.."
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
+    "@vitejs/plugin-vue": "^5.2.1",
     "typescript": "~5.6.2",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vue-tsc": "^2.1.10"
   }
 }
