--- a/examples/tauri-plugin-hid-vue-example/src-tauri/Cargo.toml
+++ b/examples/tauri-plugin-hid-vue-example/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tauri-plugin-hid-example"
+name = "tauri-plugin-hid-vue-example"
 version = "0.1.0"
 description = "A Tauri App"
 authors = ["you"]
@@ -11,7 +11,7 @@ edition = "2021"
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "tauri_plugin_hid_example_lib"
+name = "tauri_plugin_hid_vue_example_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
@@ -22,4 +22,5 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-hid = { path = "../../.." }
+tauri-plugin-hid = { version = "0.1.0", path = "../../.." }
+
