--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tauri = { version = "2.4.0" }
 serde = "1.0"
 thiserror = "2"
 hidapi-rusb = "1.3.3"
+uuid = { version = "1.16.0", features = ["v4"] }
 
 [build-dependencies]
 tauri-plugin = { version = "2.1.0", features = ["build"] }
