--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
 name = "tauri-plugin-hid"
 version = "0.1.0"
-authors = [ "You" ]
-description = ""
+authors = [ "Joseph Birks" ]
+description = "A HID plugin for Tauri"
+license = "MIT"
 edition = "2021"
 rust-version = "1.77.2"
 exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
 links = "tauri-plugin-hid"
+repository = "https://github.com/RedfernElec/tauri-plugin-hid"
+readme = "README.md"
+homepage = "https://github.com/RedfernElec/tauri-plugin-hid"
 
 [dependencies]
 tauri = { version = "2.4.0" }
