--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tauri-plugin-hid"
 version = "0.1.1"
 authors = [ "Joseph Birks" ]
-description = "A HID plugin for Tauri"
+description = "A Tauri plugin to provide access to USB HID devices"
 license = "MIT"
 edition = "2021"
 rust-version = "1.77.2"
