--- a/examples/tauri-plugin-hid-vue-example/src-tauri/Cargo.toml
+++ b/examples/tauri-plugin-hid-vue-example/src-tauri/Cargo.toml
@@ -22,5 +22,5 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-hid = { version = "0.1.0", path = "../../.." }
+tauri-plugin-hid = { path = "../../.." }
 
