Specified shared hidapi library on linux

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ tauri = { version = "2.4.0" }
 serde = "1.0"
 thiserror = "2"
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
-hidapi = "2.6.3"
+hidapi = { version="2.6.3", default-features = false, features = ["linux-shared-hidraw"] }
 
 [build-dependencies]
 tauri-plugin = { version = "2.1.0", features = ["build"] }
