--- a/permissions/default.toml
+++ b/permissions/default.toml
@@ -1,3 +1,3 @@
 [default]
 description = "Default permissions for the plugin"
-permissions = ["allow-enumerate", "allow-open", "allow-close", "allow-write", "allow-read"]
+permissions = ["allow-enumerate", "allow-open", "allow-close", "allow-write", "allow-read", "allow-send-output-report", "allow-get-input-report"]
